force-app/main/default/objects/ChangeHistory__b/ChangeHistory__b.object-meta.xml
<CustomObject>
    <label>ChangeHistory</label>
    <pluralLabel>ChangeHistories</pluralLabel>
</CustomObject>