force-app/main/default/objects/ChangeHistory__b/fields/ChangedDate__c.field-meta.xml
<CustomField>
    <fullName>ChangedDate__c</fullName>
    <label>ChangedDate</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>