force-app/main/default/objects/ChangeHistory__b/fields/NewValue__c.field-meta.xml
<CustomField>
    <fullName>NewValue__c</fullName>
    <label>NewValue</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>